--- a/index.html
+++ b/index.html
@@ -289,33 +289,104 @@
   </section>
 
   <!-- Skills Section -->
-  <section id="Skills" class="py-5 bg-white">
+  <section id="Skills" class="pt-5 pb-5">
     <div class="container">
-      <h2 class="text-center mb-5">Skills and Expertise</h2>
-      <div class="row">
-        <div class="col-md-6 mb-4">
-          <div class="p-4 border rounded shadow-sm">
-            <h4>Technical Support & Troubleshooting</h4>
-            <ul>
-              <li>Hardware maintenance & repair</li>
-              <li>System & software configuration</li>
-              <li>End-user technical assistance</li>
-            </ul>
-          </div>
+        <h2 class="text-center mb-5">Skills and Expertise: Francis Jay D. Rotol</h2>
+        <div class="row">
+            <!-- Technical Support & Troubleshooting -->
+            <div class="col-md-6 mb-5">
+                <div class="education-item p-4 border">
+                    <h3 class="mb-3">Technical Support & Troubleshooting</h3>
+                    <p>Proficient in delivering IT support and troubleshooting across various systems to ensure smooth and reliable operations. My skills include:</p>
+                    <ul class="list-unstyled pl-3">
+                        <li class="mb-2">
+                            <i class="fas fa-headset mr-2"></i>
+                            <strong>IT Support:</strong> Provided technical assistance for theme park operations, supporting both staff and IT infrastructure to maintain system stability.
+                        </li>
+                        <li class="mb-2">
+                            <i class="fas fa-tools mr-2"></i>
+                            <strong>Hardware Troubleshooting:</strong> Diagnosed and repaired computers, network devices, and CCTV systems to minimize downtime and maintain efficiency.
+                        </li>
+                        <li>
+                            <i class="fas fa-cogs mr-2"></i>
+                            <strong>Software & System Maintenance:</strong> Maintained and configured applications like UTAK, Retailware, and FIIX CMMS to ensure optimal performance.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Network & System Administration -->
+            <div class="col-md-6 mb-5">
+                <div class="education-item p-4 border">
+                    <h3 class="mb-3">Network & System Administration</h3>
+                    <p>Experienced in configuring, managing, and maintaining network systems and devices to ensure secure and efficient IT operations. Key skills include:</p>
+                    <ul class="list-unstyled pl-3">
+                        <li class="mb-2">
+                            <i class="fas fa-network-wired mr-2"></i>
+                            <strong>Network Setup & Configuration:</strong> Installed and maintained LAN/WAN networks using OC300 Omada Controller for centralized management.
+                        </li>
+                        <li class="mb-2">
+                            <i class="fas fa-fire mr-2"></i>
+                            <strong>Firewall Configuration:</strong> Configured and maintained Fortinet firewalls to enhance network protection and data security.
+                        </li>
+                        <li>
+                            <i class="fas fa-server mr-2"></i>
+                            <strong>Server & Virtualization:</strong> Managed VMware and Windows Server 2022 operations including Active Directory, file sharing, and system access control.
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6 mb-4">
-          <div class="p-4 border rounded shadow-sm">
-            <h4>Network & System Administration</h4>
-            <ul>
-              <li>LAN/WAN setup using Omada Controller</li>
-              <li>Fortinet Firewall Configuration</li>
-              <li>VMware & Windows Server Management</li>
-            </ul>
-          </div>
+
+        <div class="row">
+            <!-- Website & Infrastructure Management -->
+            <div class="col-md-6 mb-5">
+                <div class="education-item p-4 border">
+                    <h3 class="mb-3">Website & Infrastructure Management</h3>
+                    <p>Skilled in maintaining IT infrastructure, network systems, and software integration to support daily business operations. Some accomplishments include:</p>
+                    <ul class="list-unstyled pl-3">
+                        <li class="mb-2">
+                            <i class="fas fa-desktop mr-2"></i>
+                            <strong>System Administration:</strong> Managed internal systems, back-office software, and network-based platforms ensuring operational reliability.
+                        </li>
+                        <li class="mb-2">
+                            <i class="fas fa-network mr-2"></i>
+                            <strong>Infrastructure Maintenance:</strong> Installed and configured ITC and SPON IP speakers, amplifiers, and related software systems.
+                        </li>
+                        <li>
+                            <i class="fas fa-laptop-code mr-2"></i>
+                            <strong>Remote Support:</strong> Performed system troubleshooting via AnyDesk and VNC, ensuring quick and efficient technical resolutions.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Leadership & Problem-Solving -->
+            <div class="col-md-6 mb-5">
+                <div class="education-item p-4 border">
+                    <h3 class="mb-3">Leadership & Problem-Solving</h3>
+                    <p>Demonstrated leadership and analytical skills through hands-on experience in managing IT projects and solving technical challenges efficiently:</p>
+                    <ul class="list-unstyled pl-3">
+                        <li class="mb-2">
+                            <i class="fas fa-users mr-2"></i>
+                            <strong>Team Leadership:</strong> Served as Lead Man on-site, supervising installations, managing teams, and ensuring project quality.
+                        </li>
+                        <li class="mb-2">
+                            <i class="fas fa-lightbulb mr-2"></i>
+                            <strong>Analytical Thinking:</strong> Applied critical thinking to identify root causes and resolve complex IT and network issues effectively.
+                        </li>
+                        <li>
+                            <i class="fas fa-tasks mr-2"></i>
+                            <strong>Work Under Pressure:</strong> Maintained focus and composure during high-demand operations, ensuring timely and accurate results.
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </section>
+</section>
+
+
   <!-- Album Section -->
 <!-- Modern Project Album Section -->
 <section id="Album" class="py-5" style="background: linear-gradient(to bottom right, #f8f9fa, #e9f5f2);">
@@ -438,6 +509,7 @@
   </script>
 </body>
 </html>
+
 
 
 
