--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
           <div class="album-img-wrapper">
             <img src="img/francis3.jpg" class="d-block w-100 album-img" alt="Network Setup">
             <div class="album-overlay">
-              <h5>Network Setup</h5>
+              <h5></h5>
             </div>
           </div>
         </div>
@@ -421,7 +421,7 @@
           <div class="album-img-wrapper">
             <img src="img/francis2.jpg" class="d-block w-100 album-img" alt="Conference System">
             <div class="album-overlay">
-              <h5>Conference System</h5>
+              <h5>CCTV SYSTEM</h5>
             </div>
           </div>
         </div>
@@ -451,7 +451,7 @@
           <div class="album-img-wrapper">
             <img src="img/francis1.jpg" class="d-block w-100 album-img" alt="On-site Support">
             <div class="album-overlay">
-              <h5>On-site Technical Support</h5>
+              <h5>CCTV MONITORING & TROUBLESHOOTING</h5>
             </div>
           </div>
         </div>
@@ -509,6 +509,7 @@
   </script>
 </body>
 </html>
+
 
 
 
