--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
   />
-
+<link rel="icon" href="FR.png" type="image">
   <style>
     body {
       margin: 0;
@@ -509,6 +509,7 @@
   </script>
 </body>
 </html>
+
 
 
 
