--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
   />
 <link rel="icon" href="FR.png" type="image">
+  <script src="js/script.js"></script>
   <style>
     body {
       margin: 0;
@@ -210,7 +211,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#Edu"></a></li>
+          <li class="nav-item"><a class="nav-link" href="#Edu">Education</a></li>
           <li class="nav-item"><a class="nav-link" href="#Skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#Certificates">Certificate</a></li>
           <li class="nav-item"><a class="nav-link" href="#Contact">Contact</a></li>
@@ -509,6 +510,7 @@
   </script>
 </body>
 </html>
+
 
 
 
